Se prueba redirect en login-success

--- a/CalculadoraCedears.Api/wwwroot/login-success.html
+++ b/CalculadoraCedears.Api/wwwroot/login-success.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=https://api-calculadoracedears-dmdgbva0gncwgcba.eastus2-01.azurewebsites.net/login-success.html" />
+
     <title>Autenticación Exitosa - Calculadora CEDEARs</title>
     <style type="text/css">
         * {
